  - Support for Python 3.5
  - Project reorganization:
    - Project renamed to SourceSpec
    - ssp_residuals renamed to source_residuals
    - New installable package (e.g., via pip)
    - Only compatible with ObsPy >= 1.0.0
	- Traces are filtered before computing S/N ratio
	- Trace clipping detection
	- Traces are always plotted, even if no inversion is performed
  - New options for P and S arrival time tolerance
	- Use json format for traceid correction file
	- Code cleaning and optimization:
		- Switch from optparse (deprecated) to argparse
    - Code style fixes and refactoring
	- BUGFIX: Fix a major bug in reading hypo pick file
	- BUGFIX: Fix for pick file not read in source_model
v0.8 - 2014-07-11
	- Trace plot showing S and noise time windows
	- Improved handling of paz files
	- Per-station Mo on output file
	- Code cleaning and optimization
v0.7 - 2014-04-07
	- Code reorganization:
		- inversion code split to its own functions
	- Option to use bounded inversion
	- Station residuals, through ssp_residuals.py
	- source_model can now output tables of trade-off
		between parameters
	- Fix in the way noise trace is computed and processed
	- Documentation!
v0.6 - 2013-06-05 - Several improvements:
	- Signal to noise weighting
	- Improved local magnitude computation
	- New options:
		- time domain integration
		- vertical component
	- Largely improved plotting function
	- More data formats supported (Antilles, IPOC)
	- source_model: a code for plotting theoretical spectra
	- Code refactoring
v0.5 - 2013-02-10 - Several improvements:
	- Azimuth computation
	- Construction of an overall database
	- Local magnitude computation
	- konnoOhmachiSmoothing
v0.4 - 2012-04-10 - Several improvements:
	- Logging infrastructure
	- Code reorganization
v0.3 - 2012-02-10 - Several improvements:
	- Output is no more printed at screen, but to file
	- The plots can be saved to a file as well
	- We differentiate between short periods and broad bands