@@ -62,6 +62,11 @@ bsd = float(default=10e6)
 # to consider a trace as noise
 rmsmin = float(default=0.)
 
+# P and S wave velocity for travel time calculation
+# (if None, a global velocity model is used instead)
+vp_tt = float(default=None)
+vs_tt = float(default=None)
+
 # Arrival tolerances
 p_arrival_tolerance = float(default=4.0)
 s_arrival_tolerance = float(default=4.0)
